[tool.poetry]
name = "fastapi-url-pinger"
version = "0.1.0"
description = "A FastAPI service to ping URLs at regular intervals"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
requests = "^2.31.0"
pydantic = "^2.5.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"